--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Colorly</title>
+    <title>Colorly – A versatile collection of color tools by Adam Graham</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
